# CommonLibSSE-NG-Template-Plugin

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vcpkg-configuration.json  vcpkg.json
.github/workflows/: cmake-action.yml
cmake/: headerlist.cmake  sourcelist.cmake  tests.cmake  x64-windows-skse.cmake
src/: hook.cpp  hook.h  log.h  plugin.cpp
